--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,107 @@
-.App {
+h1 {
   text-align: center;
+  font-size: 45px;
+  color: #A35F35;
+  margin: 30px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App {
+  align-items: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.dropdown {
+  width: 200px;
+  margin: 30px;
+  margin-bottom: 40px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.dropdownControl {
+  background-color: #A35F35;
+  color: #E6C7B2;
+  font-weight: bold;
+  padding: 8px 10px;
+}
+
+.dropdownMenu {
+  background-color: #A35F35;
+  font-weight: bold;
+}
+
+.arrowClassName {
+  border-color: #E6C7B2 transparent transparent;
+}
+
+.is-open .arrowClassName {
+  border-color: transparent transparent #E6C7B2;
+}
+
+.Dropdown-option {
+  color:#E6C7B2;
+}
+
+.Dropdown-option.is-selected {
+  background-color: #7A3911;
+  color: #E6C7B2;
+}
+
+.Dropdown-option:hover {
+  background-color: #7A3911;
+  color: #E6C7B2;
+}
+
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+ input[type=range] {
+    -webkit-appearance: none;
+    background-color: #A35F35;
+    width: 196px;
+    height:20px;
+    border-radius: 5px;
   }
-  to {
-    transform: rotate(360deg);
+
+input[type="range"]::-webkit-slider-thumb {
+     -webkit-appearance: none;
+    background-color: #7A3911;
+    width: 10px;
+    height: 26px;
   }
 }
+
+.text {
+  color: #A35F35;
+  font-weight: bold;
+  margin: 8px;
+}
+
+.inputLabel {
+  color: #7A3911;
+  font-weight: bold;
+  font-size: 1.2rem;
+  margin: 5px;
+  margin-bottom: 30px;
+}
+
+.button {
+  background-color: #A35F35;
+  color: #E6C7B2;
+  font-weight: bold;
+  font-size: 1.0rem;
+  width: 130px;
+  height: 40px;
+  border-radius: 10px;
+  font-family: none;
+  box-shadow: 2px 3px #7A3911;
+  border:none;
+  margin-bottom: 40px;
+}
+
+.button:hover:enabled {
+  background-color: #7A3911;
+}
+
+.button:disabled {
+  opacity: 0.5;
+}
+
+
