--- a/src/PictureList.css
+++ b/src/PictureList.css
@@ -3,3 +3,9 @@
 	margin: 16px;
 	box-shadow: 0 0 20px 7px rgba(0, 0, 0, 0.7);
 }
+
+.pictureList {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
